<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/weather_bg">

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="100dp">

        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0*C"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/weatherCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="165sp"
                android:paddingLeft="100dp"
                android:textColor="#FFFFFF"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/cityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="150sp"
                android:paddingLeft="100dp"
                android:text="Fetching..."
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>



        <TextView
            android:id="@+id/sub_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            tools:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/city_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/sub_field"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            tools:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/city_field"
            tools:text="@string/icon"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/details_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/weather_icon"
            tools:text="@string/details"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/current_temperature_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/details_field"
            tools:text="@string/temp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_temperature_field"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/dining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_baseline_local_dining_24px"
                app:backgroundTint="#49f50b" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/gasStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_baseline_local_gas_station_24px"
                app:backgroundTint="@android:color/holo_orange_dark" />

        </RelativeLayout>

        <Button
            android:id="@+id/fabLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:text="@string/manualLocation"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/colorAccent"
            />


        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/explore"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/colorAccent"/>

        <View
            android:id="@+id/fabBGLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:visibility="gone" />

        <!-- menu FAB -->
        <LinearLayout
            android:id="@+id/layoutfabSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/standard_110"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_menu_24px"
                app:elevation="15dp"
                app:fabSize="normal" />
        </LinearLayout>


        <!-- Phone Call -->
        <LinearLayout
            android:id="@+id/layoutfabCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/standard_110"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_call_24px"
                app:elevation="15dp"
                app:backgroundTint="#185be0"
                app:fabSize="normal" />
        </LinearLayout>

        <!-- cancel -->
        <LinearLayout
            android:id="@+id/layoutCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/standard_110"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_cancel_24px"
                app:elevation="15dp"
                app:fabSize="normal" />
        </LinearLayout>

        <!-- language -->
        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/standard_110"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/languageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search_24px"
                app:backgroundTint="#f221d5"
                app:elevation="15dp"
                app:fabSize="normal" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="310dp"
            android:src="@drawable/ic_see_ar"
            app:backgroundTint="@color/colorPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="310dp"
            android:src="@drawable/ic_baseline_local_hotel_24px"
            app:backgroundTint="@color/backgroundActivity" />


    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


